feat: update new endpoint and tests
