# src/main/openapi/openapi-bff.yaml
@@ -227,12 +227,19 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ProblemDetailResponse'
-  /internal/images/{refId}/{refType}:
+  /images/{refId}/{refType}:
     post:
       tags:
         - imagesInternal
       description: Upload Images
       parameters:
+        - in: header
+          name: Content-Length
+          required: true
+          schema:
+            minimum: 1
+            maximum: 20000
+            type: integer
         - name: refId
           in: path
           required: true
@@ -242,24 +249,17 @@ paths:
           in: path
           required: true
           schema:
-            type: string
+            $ref: "#/components/schemas/RefType"
       operationId: uploadImage
       requestBody:
         required: true
         content:
-          multipart/form-data:
+          image/*:
             schema:
-              type: object
-              required:
-                - image
-              properties:
-                image:
-                  format: binary
-                  description: file data
-                  type: string
-            encoding:
-              image:
-                contentType: application/octet-stream
+              minimum: 1
+              maximum: 20000
+              type: string
+              format: binary
       responses:
         "201":
           description: CREATED
@@ -284,17 +284,15 @@ paths:
           in: path
           required: true
           schema:
-            type: string
+            $ref: "#/components/schemas/RefType"
       responses:
         "200":
           description: OK
           content:
-            image/png:
+            image/*:
               schema:
-                type: string
-                format: binary
-            image/jpg:
-              schema:
+                minimum: 1
+                maximum: 20000
                 type: string
                 format: binary
         "400":
@@ -309,6 +307,12 @@ paths:
       description: update Images
       operationId: updateImage
       parameters:
+        - in: header
+          name: Content-Length
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 20000
         - name: refId
           in: path
           required: true
@@ -318,23 +322,16 @@ paths:
           in: path
           required: true
           schema:
-            type: string
+            $ref: "#/components/schemas/RefType"
       requestBody:
         required: true
         content:
-          multipart/form-data:
+          image/*:
             schema:
-              type: object
-              required:
-                - image
-              properties:
-                image:
-                  format: binary
-                  description: file data
-                  type: string
-            encoding:
-              image:
-                contentType: application/octet-stream
+              minimum: 1
+              maximum: 20000
+              type: string
+              format: binary
       responses:
         "200":
           description: OK
@@ -350,10 +347,13 @@ paths:
                 $ref: '#/components/schemas/ProblemDetailResponse'
 components:
   schemas:
+    RefType:
+      type: string
+      enum: [ logo, favicon ]
     Theme:
       type: object
       properties:
-        version:
+        modificationCount:
           format: int32
           type: integer
         creationDate:
@@ -388,7 +388,7 @@ components:
     ThemeUpdateCreate:
       type: object
       properties:
-        version:
+        modificationCount:
           format: int32
           type: integer
         creationDate:
@@ -480,13 +480,6 @@ components:
         value:
           type: string
     ProblemDetailInvalidParam:
-      type: object
-      properties:
-        name:
-          type: string
-        message:
-          type: string
-    ValidationConstraint:
       type: object
       properties:
         name:
